# smart-intake

./: .env.example  .gitignore  LICENSE  README.md  analyzer.py  app.py  models.py  prompts.py  pyproject.toml
sample_data/: README.md  existing_clients.csv  fee_schedule.csv  intake_form.txt
