[project]
name = "smart-intake"
version = "0.1.0"
description = "AI-powered client intake -- conflict checks, matter classification, and engagement letters in under 5 minutes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "rTech Digital Consulting LLC" },
]

dependencies = [
    "streamlit>=1.45.0",
    "anthropic>=0.52.0",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["app.py", "analyzer.py", "models.py", "prompts.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
